@@ -47,6 +47,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- os.access now supports Unicode path names on non-Win32 systems.
+
 - Patches #925152, #1118602: Avoid reading after the end of the buffer
   in pyexpat.GetInputContext.
 
